--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "color-convert": "^2.0.1",
-    "notyf": "^3.10.0"
+    "notyf": "^3.10.0",
+    "socket.io-client": "^4.6.1"
   }
 }
